--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
         <p class="smaller-text fade">Fill out the form below and I'll contact you soon as possible!</p>
 
-        <form action="https://formspree.io/moqvbrrl" method="POST" class="contact-form">
+        <form action="https://formspree.io/f/myyoyogw" method="POST" class="contact-form">
             <div class="alert" id="formAlert">
                 <p class="alert-text">Please fill in all fields.</p>
                 <i class="fas fa-times close-icon"></i>
