--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
                     <li class="skill">HTML</li>
                     <li class="skill">CSS</li>
                     <li class="skill">JavaScript</li>
-                    <li class="skill">Bootstrap</li>
-                    <li class="skill">React</li>
+                    <li class="skill">Java</li>
+                    <li class="skill">C#</li>
                 </ul>
             </div>
             <div class="skill-group">
