--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <i class="fas fa-laptop-code icon"></i>
                 <h5 class="skill-group-title">Front End</h5>
                 <ul class="skill-list">
-                    <li class="skill">HTML</li>
+                    <li class="skill">HTML/CSS</li>
                     <li class="skill">CSS</li>
                     <li class="skill">JavaScript</li>
                     <li class="skill">Java</li>
